# branding-zephyrus

./: .branding-zephyrus.spec.kate-swp  Makefile.in  README  branding-zephyrus.spec  color_dec  components.mk  configure.ac
components/ahttpd/styles/: alterator.css  card-index.css  menu.css
components/browser-qt/: theme.qrc
components/browser-qt/design/: design.ini.in  design.qss
components/grub2/: theme.txt
components/grub2/f/: dejavu_sans_10.pf2  droid_sans_12.pf2  droid_sans_bold_14.pf2  misc_fixed_13.pf2  vera_sans_10.pf2  vera_sans_12.pf2  vera_sans_bold_14.pf2
components/indexhtml/: index-en.html.in  index-ru.html.in  index.css  indexhtml.desktop.in
components/plymouth/zephyrus/: zephyrus.plymouth  zephyrus.script
components/systemd/: os-release.in
menu/: 50-xfce-applications.menu  altlinux-wine.directory
menu/applications/: Ri-li.desktop  cups.desktop  dropbox.desktop  freeciv-gtk2.desktop  freeciv-mp-gtk2.desktop  freeciv-server.desktop  io.github.celluloid_player.Celluloid.desktop  mate-search-tool.desktop  org.pulseaudio.pavucontrol.desktop  org.shotcut.Shotcut.desktop  stardict.desktop  wine-notepad.desktop  wine-regedit.desktop  wine-uninstaller.desktop  wine-winecfg.desktop  wine-wineconsole.desktop  wine-winefile.desktop  wine-winemine.desktop  xkill.desktop  xterm.desktop
notes/: Makefile  livecd-start.ru.html  livecd-start.uk.html  release-notes.all.html.in  release-notes.ru.html.in  release-notes.uk.html.in
slideshow/: slideshow.conf
system-settings/: lightdm-gtk-greeter.conf.in
system-settings/polkit-rules/: 70-SL-NM-allow-modify-system.rules
